<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context="app.favloc.com.favouritelocations.ForgotPasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/resetPasswordTitleHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:id="@+id/forgotTitle1ID"
            android:textSize="23sp"
            />

        <TextView
            android:text="@string/resetPasswordTitleHint2"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:id="@+id/forgotTitle2ID"
            android:textSize="23sp"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/resetPasswordID"
            android:hint="@string/resetPasswordHint"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:text="@string/resetPasswordButtonHint"
            android:id="@+id/resetButtonID"
            android:textColor="#fafafa"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>
    
</RelativeLayout>
