<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="180dp"
    android:background="@drawable/whitebackground">

    <TextView
        android:id="@+id/locNameID"
        android:text="@string/hpTitleHint"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="@dimen/BigTitle_Size"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/locLandMarkID"
        android:text="@string/hpLandmarkHint"
        android:textColor="#000000"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/locLatID"
        android:text="@string/listRowLatHint"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/locLngID"
        android:text="@string/listRowLngHint"
        android:textColor="#000000"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mapIconID"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/mapicon"/>

        <ImageView
            android:id="@+id/deleteIconID"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="80dp"
            android:src="@drawable/deleteicon"/>


        <ImageView
            android:id="@+id/shareIconID"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="80dp"
            android:src="@drawable/shareicon"/>

    </LinearLayout>

</LinearLayout>