<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/background"
    android:backgroundTintMode="add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.favloc.com.favouritelocations.LoginActivity">

    <ScrollView
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/LIIconID"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/signinimage"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <com.facebook.login.widget.LoginButton
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/loginButtonFBID"/>

            <TextView
                android:layout_marginTop="13dp"
                android:layout_gravity="center"
                android:text="@string/OR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/LIusernameID"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/userNameHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/LIpasswordID"
                    android:inputType="textPassword"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/passwordHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/buttonTextLight"
                android:textSize="@dimen/ButtonTextSize"
                android:textStyle="bold"
                android:id="@+id/LISignInButtonID"
                android:text="@string/loginButton"
                android:layout_width="80dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/LISignUpID"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/createAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/LIforgotPasswordID"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
